cluster/beeformed/network-policy.yaml
# General network policies for the beeformed namespace
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: beeformed
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress


# Allowing ingress traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-traffic
  namespace: beeformed
spec:
  podSelector:
    matchLabels:
      app: beeformed
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress-ntnu
